--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -3,22 +3,18 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.yourcompany.yourgame">
     
-    <!-- 必需权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/app_icon"
-        android:label="@string/app_name"
-        android:usesCleartextTraffic="true"
-        tools:replace="android:allowBackup,android:label,android:icon">
+        tools:replace="android:allowBackup">
         
-        <!-- 穿山甲广告Activity -->
         <activity
             android:name="com.bytedance.sdk.openadsdk.stub.activity.Stub_Standard_Portrait_Activity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            tools:replace="android:configChanges,android:theme" />
+        
     </application>
 </manifest>
